# MODULAR-RAG-MCP-SERVER

./: .env.example  .gitignore  CLAUDE.md  DEV_SPEC.md  GEMINI.md  README.md  main.py  pyproject.toml
config/: settings.yaml  settings.yaml.example
config/prompts/: chunk_refinement.txt  image_captioning.txt  metadata_enrichment.txt  rerank.txt
data/documents/: .gitkeep  ocr_01.pptx
mytest/: 01_config.py  02_logger.py  03_llm.py  04_ollama.py  07_embedding.py  09_bge_m3_compare.py  10_bge_flag.py  11_splitter.py  12_chroma_store.py  13_llm_reranker.py  15_reranker_compare.py  16_openai_vision_llm.py  17_core_types.py  18_file_integrity.py  19_pdf_loader.py  20_document_chunker.py  23_dense_encoder.py  25_batch_processor.py  26_bm25_indexer.py  29_image_storage.py  31_ingestion_real.py  db_dump.md  debug_find_images.py  export_db_to_md.py
mytest/B_Libs可插拔层/: 03_工厂模式注册.py  04_自定义评估器.py  06_BGE_M3完整能力.py  12_CrossEncoder_Reranker.py
mytest/C_Ingestion_Pipeline_MVP/: 05_ChunkRefiner.py  06_MetadataEnricher.py  07_ImageCaptioner.py  09_SparseEncoder_jieba.py  11_SparseEncoder_BGE.py  12_VectorUpserter.py  14_Pipeline编排.py  15_Pipeline编排.py  16_真实摄取测试.py
mytest/D_Retrieval_MVP/: 01_DenseRetriever.py  01_QueryProcessor.py  02_DenseRetriever.py  03_SparseRetriever.py  04_Fusion.py  05_HybridSearch.py  06_Reranker.py  07_Query.py  D_Retrieval_流程详解.md
mytest/E_MCP_Server/: 01_MCP_Server入口.py  01_Protocol_and_Server.py  02_ProtocolHandler.py  02_Query_Knowledge_Hub.py  03_List_Collections.py  04_Document_Summary.py  05_Multimodal_Assembler.py  06_Live_MCP_Inspector.py  06_MCP_Output_Validator.py  07_Full_Response_Inspector.py  08_Test_Image_Search.py  test_all.py
mytest/F_Observability/: 01_TraceContext.py
mytest/G_Dashboard/: 01_dashboard_overview.py  02_document_manager.py  03_data_browser.py  04_ingestion_manager.py  (+2 more)
scripts/: evaluate.py  ingest.py  query.py  start_dashboard.py
(+164 files in other folders)
